--- a/testCase.html
+++ b/testCase.html
@@ -7,26 +7,26 @@
 
 </head>
 <body style="background-color:ghostwhite" >
-
+    <h1>Điền thông tin</h1>
     <div class="form">
-      <div>
+      <div class="form-luan">
         <label for="name" class="form-label">Tên Sản Phẩm:</label>
         <input id="tên sản phẩm" type="text" class="form-input" >
         <div class="error-message"></div>
       </div>
-      <div>
+      <div class="form-luan">
         <label for="number" class="form-label">Mã Sản Phẩm:</label>
-        <input id="mã sản phẩm" type="text" class="form-input">
+        <input id="mã sản phẩm" type="text" class="form-input" style="margin-left: 13px">
         <div class="error-message"></div>
       </div>
-      <div>
+      <div class="form-luan">
         <label for="quantity" class="form-label">Số Lượng Bán:</label>
-        <input id="số lượng bán" type="text" class="form-input" >
+      <input id="số lượng bán" type="text" class="form-input" >
         <div class="error-message"></div>
       </div>
-      <div>
+      <div class="form-luan">
         <label for="price" class="form-label">Giá Bán:</label>
-        <input id="giá bán" type="text" class="form-input" >
+        <input id="giá bán" type="text" class="form-input" style="margin-left: 50px" >
         <div class="error-message"></div>
       </div>
       <div>
@@ -34,20 +34,25 @@
       </div>
 
       <button id="add" onclick="addNew()" style="background: chartreuse">Add New</button>
-      <button id="update" style="display: none" onclick="changeProduct() ">Update</button>
+      <button id="update" style="display: none ; color: hotpink"  onclick="changeProduct() ">Update</button>
+      <h1>Thông tin sản phẩm</h1>
+      <div>
 
-  <table border="1px" cellpadding="10" cellspacing="10" id="tableContent" >
-    <tr>
-      <th>ID</th>
-      <th>Tên sản phẩm</th>
-      <th>Mã sản phẩm</th>
-      <th>số lượng bán </th>
-      <th>giá bán </th>
-      <th>chức năng</th>
-    </tr>
-  </table>
+        <table border="1px" cellpadding="10" cellspacing="10" id="tableContent" >
 
-  </div>
+          <tr>
+            <th>ID</th>
+            <th>Tên sản phẩm</th>
+            <th>Mã sản phẩm</th>
+            <th>số lượng bán </th>
+            <th>giá bán </th>
+            <th>chức năng</th>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+
     <script src="testCase.js"></script>
 </body>
 </html>
